feat: Use Java 25 in Besu docker image
Signed-off-by: Usman Saleem <usman@usmans.info>